sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:33: error: not found: value triee
  }while(!triee)
          ^